--- a/WebContent/css/editor.css
+++ b/WebContent/css/editor.css
@@ -285,7 +285,7 @@ bottoni SymbolButton
 	background-size: 30%;
 }
 
-#enldineButton {
+#endlineButton {
 	background-image: url(../img/endline.png);
 	background-size: 45%;
 }
@@ -631,9 +631,8 @@ svg {
 	margin-left: -15px;
 }
 
-.rect{
-	    background-color: green !important;
-
+.rect {
+	background-color: green !important;
 }
 
 .cursor-editor {
@@ -657,30 +656,51 @@ svg {
 	width: 50%;
 }
 
-
-#noteMenuEdit{
-  background-color:rgba(33, 29, 29, 0.7) !important;
-  /*display:none;*/
-  width: 350px !important;
-  padding: 5px !important;
-  color: white !important;
+#noteMenuEdit {
+	background-color: rgba(33, 29, 29, 0.7) !important;
+	/*display:none;*/
+	width: 350px !important;
+	padding: 5px !important;
+	color: white !important;
 }
 
-.buttonMenuEdit{
-  background-color: rgba(33, 29, 29, 0.7);
-  color: white;
+.buttonMenuEdit {
+	background-color: rgba(33, 29, 29, 0.7);
+	color: white;
 }
 
-#editNote{
-  width: 50px !important;
+#editNote {
+	background-color: rgba(33, 29, 29, 0.7);
+	width: 50px !important;
 }
-
 
 #score {
 	width: 200%;
-	background-color:white;
-	border:2px solid #D4D4D4;
+	background-color: white;
+	border: 2px solid #D4D4D4;
 	margin-left: auto;
 	margin-right: auto;
-	border-radius: 7px 7px 7px 7px;	
+	border-radius: 7px 7px 7px 7px;
+}
+
+.click_menu {
+	background-color: rgba(33, 29, 29, 0.7);
+	border: 1px solid #D4D4D4;
+	border-radius: 3px 3px 3px 3px;
+	font-size: 0.9em;
+	color: white;
+	/*display: none ;*/
+	position: fixed !important;
+	padding: 3px;
+}
+
+.editNote_menu {
+	background-color: rgba(33, 29, 29, 0.7);
+	border: 1px solid #D4D4D4;
+	border-radius: 3px 3px 3px 3px;
+	font-size: 0.9em;
+	color: white;
+	/*display: none ;*/
+	position: fixed;
+	padding: 3px;
 }
