--- a/WebContent/css/user.css
+++ b/WebContent/css/user.css
@@ -1,13 +1,12 @@
 @charset "utf-8";
 /* CSS Document */
-
 html{
 	zoom:0.80 !important;
 }
 
 body {
-	background: url(../img/fhd-bg.jpg) no-repeat center top fixed;
 	
+	background: url(../img/user-bg.jpg) no-repeat center center fixed;
 	background-size: cover;
 	background-repeat: no-repeat;
 	
@@ -23,6 +22,7 @@ body {
 }
 
 #metronomoBar {
+	display : none;
 	text-align: left;
 	margin-top: 1%;
 }
@@ -139,10 +139,12 @@ label {
 }
 
 #rigaZero {
+	display : none;
 	background-color: rgba(33, 29, 29, 0.5);
 }
 
 #primaRiga {
+	display : none;
 	background-color: rgba(33, 29, 29, 0.5);
 }
 
@@ -152,7 +154,8 @@ label {
 }
 
 #secondaRiga {
-	background-color: rgba(33, 29, 29, 0.5);
+	display :none;
+	background-color: rgba(33, 29, 29, 1.0);
 }
 
 #terzaRiga {
@@ -165,6 +168,7 @@ label {
 }
 
 #quintaRiga {
+	display : none;
 	margin-bottom: 15px;
 }
 
@@ -384,26 +388,32 @@ bottoni OptionButton
 }
 
 #reset, #resetxs {
+	display : none;
 	background-image: url(../img/reset.png);
 }
 
 #download, #downloadxs {
+	display : none;
 	background-image: url(../img/download.png);
 }
 
 #upload, #uploadxs {
+	display : none;
 	background-image: url(../img/upload.png);
 }
 
 #undo, #undoxs {
+	display : none;
 	background-image: url(../img/undo.png);
 }
 
 #redo, #redoxs {
+	display : none;
 	background-image: url(../img/redo.png);
 }
 
 #rec, #recxs {
+	display : none;
 	margin-top: 1%;
 	background-image: url(../img/rec.png);
 	background-size: contain;
@@ -429,7 +439,7 @@ bottoni OptionButton
 }
 
 #Spartito {
-	background-image: url(../img/pergamena.png);
+	background-image: url(../img/paper.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -472,6 +482,7 @@ svg {
 }
 
 #noteMenuEdit {
+	display : none;
 	background-color: rgba(33, 29, 29, 0.7) !important;
 	/*display:none;*/
 	width: 350px !important;
@@ -480,11 +491,13 @@ svg {
 }
 
 .buttonMenuEdit {
+		display : none;
 	background-color: rgba(33, 29, 29, 0.7);
 	color: white;
 }
 
 #editNote {
+		display : none;
 	background-color: rgba(33, 29, 29, 0.7);
 	width: 50px !important;
 }
@@ -518,4 +531,52 @@ svg {
 	/*display: none ;*/
 	position: fixed;
 	padding: 3px;
+	
+}
+
+
+#comment-section {
+	border-radius : 11px;
+	background-color:rgba(33, 29, 29, 0.4);
+	
+}
+
+.comment{
+	color: white;
+	background-color: gray;
+	border-radius: 10px;
+	
+}
+
+.panel{
+	border-radius:15px !important;
+	
+	
+}
+
+.panel-body{
+	width: auto !important;
+}
+
+
+.user-comment{
+	padding: 5px !important;
+
+}
+
+#submit-btn{
+	border-radius: 11px !important;
+}
+
+
+.panel-heading{
+	
+	border-bottom: 1px solid black !important;
+	background-color: rgba(33, 29, 29, 0.20) !important;
+	border-top-left-radius: 11px;
+	border-top-right-radius: 11px;
+}
+
+.panel-default{
+	border: 2px solid black !important;
 }
