--- a/WebContent/css/editor.css
+++ b/WebContent/css/editor.css
@@ -6,7 +6,7 @@ html{
 }
 
 body {
-	background: url(../img/fhd-bg.jpg) no-repeat left top fixed;
+	background: url(../img/theatre.jpg) no-repeat left top fixed;
 	
 	background-size: cover;
 	background-repeat: no-repeat;
