--- a/WebContent/css/editor.css
+++ b/WebContent/css/editor.css
@@ -519,3 +519,21 @@ svg {
 	position: fixed;
 	padding: 3px;
 }
+
+
+
+::-webkit-scrollbar
+{
+  width: 12px;  /* for vertical scrollbars */
+  height: 12px; /* for horizontal scrollbars */
+}
+
+::-webkit-scrollbar-track
+{
+  background: rgba(0, 0, 0, 0.1);
+}
+
+::-webkit-scrollbar-thumb
+{
+  background: rgba(0, 0, 0, 0.5);
+}
