--- a/WebContent/css/user.css
+++ b/WebContent/css/user.css
@@ -582,3 +582,21 @@ svg {
 .panel-default{
 	border: 2px solid black !important;
 }
+
+
+
+::-webkit-scrollbar
+{
+  width: 12px;  /* for vertical scrollbars */
+  height: 12px; /* for horizontal scrollbars */
+}
+
+::-webkit-scrollbar-track
+{
+  background: rgba(0, 0, 0, 0.1);
+}
+
+::-webkit-scrollbar-thumb
+{
+  background: rgba(0, 0, 0, 0.5);
+}
