aggiunti play e stop xs a userDraft e editorDraft ritoccata la funzione play, aggiunta tastiera responsive

--- a/WebContent/css/editor.css
+++ b/WebContent/css/editor.css
@@ -533,9 +533,10 @@ svg {
 
 @media (max-width: 1199px) {
 	
-	svg>*{
-		width: 10% !important;
+
+
+	#quintaRiga{
+	overflow: scroll; 
 	}
-	
 	
 }
